--- a/explication.css
+++ b/explication.css
@@ -86,6 +86,14 @@ nav.pt4 {
   text-decoration: none;
 }
 
+nav.pt5 {
+  font-family: 'Bebas Neue';
+  font-size: 25px;
+  padding: 30px 100px 0px;
+  color: black;
+  text-decoration: none;
+}
+
 div.pt5 {
   font-weight: bold
 }
